# thaven

./: .editorConfig  .env  .eslintrc.json  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TODO.md  api.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts
.devcontainer/: devcontainer.json
docs/: frontend-ui-rpd.md
locales/: English.yml  简体中文.yml
presets/: index.ts
presets/types/: vite.d.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src/api/: api.ts  invoke.ts  mock.ts
src/components/: Dropdown.vue  HelloWorld.vue  Navigation.vue  PreviewInfoOverlay.vue  counter.vue  menu.vue
src/composables/: http.test.ts  http.ts  toast.ts  useLanguage.ts  useTyped.ts  useVisits.ts
src/layouts/: default.vue
src/pages/: [...notFound].vue  about.vue  downloadCenter.vue  index.vue  localList.vue  setup.vue
src/plugins/: i18n.ts  nprogress.ts  router.ts  type.test.ts  type.ts
src/stores/: createCounter.ts  useAppSettings.ts  useDownloadTasks.test.ts  useDownloadTasks.ts
src/styles/: main.css
src/tests/: plugins-type.test.ts
src/utils/: format.test.ts  format.ts
