[package]
name = "thaven"
version = "0.1.0"
description = "A Tauri App"
authors = ["luck"]
license = ""
repository = ""
edition = "2021"
default-run = "thaven"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "thaven_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri-plugin-http = "2.4.4"
tauri = { version = "2.5.1", features = [] }
